[ADD] tests